tests/resources-in-batch/2.resource-migration/0.0.configmap.yaml

---

apiVersion: v1
kind: ConfigMap
metadata:
  name: gatewayclass-config
  namespace: kube-system
data:
  any.config: xxx
