tests/resources-in-batch/2.resource-migration/0.1.gatewayclass-bigip1.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: bigip1
spec:
  controllerName: f5.io/gateway-controller-name
  parametersRef:
    group: ""
    kind: ConfigMap
    name: gatewayclass-config
    namespace: kube-system
