tests/resources-in-batch/2.resource-migration/0.2.gatewayclass-bigip2.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: bigip2
spec:
  controllerName: f5.io/gateway-controller-name
  parametersRef:
    group: ""
    kind: ConfigMap
    name: gatewayclass-config
    namespace: kube-system
