tests/resources-in-batch/2.resource-migration/0.3.gateway-in-gwc1.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  labels:
    domain: k8s-gateway.nginx.org
spec:
  gatewayClassName: bigip1
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  addresses:
    - value: 10.250.18.119
