tests/resources-in-batch/2.resource-migration/0.4.gateway-in-gwc2.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  labels:
    domain: k8s-gateway.nginx.org
spec:
  gatewayClassName: bigip2
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  addresses:
    - value: 10.250.18.119
